# StockAdvice-Agentic

./: pyproject.toml  stock_agent.py  stock_agent_perpl.py
