[project]
name = "deepseek-stock"
version = "0.1.0"
description = "Stock analysis agent using LangGraph and LLMs"
requires-python = ">=3.12"
dependencies = [
    "yfinance",
    "pandas",
    "numpy",
    "matplotlib",
    "curl-cffi",
    "langgraph",
    "langchain-ollama",
    "langchain-perplexity",
    "typing-extensions",
    "python-dotenv>=1.2.1",
    "langchain-core>=1.2.12",
]
